# lexharvest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  anki_template.toml  config.toml.example  language_prompt_injections.json  pos_hints.json  pyproject.toml
notebooks/: explore_enriched_vocab.ipynb  explore_genanki.ipynb  explore_pydantic_ai.ipynb  explore_spaCy.ipynb  explore_wiktionary.ipynb
src/lexharvest/: __init__.py  __main__.py  config.py  pipeline.py
src/lexharvest/agents/: enricher.py  splitter.py
src/lexharvest/db/: models.py  repository.py  schema.py
src/lexharvest/dictionaries/: wiktionary.py
src/lexharvest/exporters/: __init__.py  anki.py  base.py  csv.py
src/lexharvest/llm/: factory.py
src/lexharvest/normalizers/: base.py  pos_hints.json  spacy_normalizer.py
src/lexharvest/scrapers/: duolingo.py
