[project]
name = "lexharvest"
version = "0.1.0"
description = "Duolingo vocabulary extraction and LLM enrichment pipeline"
readme = "README.md"
authors = [
    { name = "Christian Beischl", email = "christian.beischl@tum.de" }
]
requires-python = ">=3.10.4"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.102.0",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
